--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,17 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/jwt?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/springboot-jwt
 spring.datasource.username=root
-spring.datasource.password=root
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.password=admin
+spring.jpa.generate-ddl=false
+spring.jpa.hibernate.ddl-auto=none
 # App Properties
 hendisantika.app.jwtSecret=jwtSecretKey
 hendisantika.app.jwtExpiration=86400
+
+#html thymeleaf resources/templates
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.cache=false
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.servlet.content-type=text/html
+
+server.port=8081
